--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "faker": "^4.1.0",
     "material-ui": "^0.20.0",
     "material-ui-rating": "^1.4.1",
+    "moment": "^2.22.0",
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
     "react": "^16.3.0",
