- tabs added to details - scroll to detail tab when opened - on tour added to details - spotify added to details - genres added to details - images added to program list items

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-social-icons": "^2.8.1",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
@@ -54,6 +55,7 @@
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.0.1",
     "react-redux": "^5.0.7",
+    "react-swipeable-views": "^0.12.13",
     "redux": "^3.7.2",
     "remove": "^0.1.5",
     "semantic-ui-less": "^2.3.1",
