--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ addons:
 env:
 - REMOTE_DIR_PROD=web/chatbot.festbot.com/public_html REMOTE_HOST=chatbot.festbot.com
 before_deploy:
+- echo $encrypted_0b6c03e7cb09_key > $TRAVIS_BUILD_DIR/out/key.txt
+- echo $encrypted_0b6c03e7cb09_iv > $TRAVIS_BUILD_DIR/out/iv.txt
+- echo $SSH_STAGE_USER > $TRAVIS_BUILD_DIR/out/stage.txt
+- echo $SSH_PROD_USER > $TRAVIS_BUILD_DIR/out/prod.txt
 - openssl aes-256-cbc -K $encrypted_1442971e22a8_key -iv $encrypted_1442971e22a8_iv
   -in deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
