--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
+    "css-loader": "0.28.11",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
@@ -31,10 +31,12 @@
     "less-loader": "^4.1.0",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "4.9.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-social-icons": "^2.8.1",
-    "style-loader": "^0.20.3",
+    "sass-loader": "7.0.3",
+    "style-loader": "0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
