--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "material-ui-rating": "^1.4.1",
     "moment": "^2.22.0",
     "prop-types": "^15.6.1",
+    "querystring": "^0.2.0",
     "ramda": "^0.25.0",
     "react": "^16.3.0",
     "react-axios": "^2.0.0",
