--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "classnames": "^2.2.6",
     "emoji-flags": "^1.2.0",
     "faker": "^4.1.0",
-    "google-maps-react": "^2.0.2",
     "material-ui": "^0.20.0",
     "material-ui-rating": "^1.4.1",
     "moment": "^2.22.0",
@@ -67,6 +66,7 @@
     "remove": "^0.1.5",
     "semantic-ui-less": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
+    "styled-components": "^3.3.3",
     "typeface-roboto": "0.0.54"
   }
 }
