--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "classnames": "^2.2.6",
     "emoji-flags": "^1.2.0",
     "faker": "^4.1.0",
+    "hammerjs": "^2.0.8",
     "material-ui": "^0.20.0",
     "material-ui-rating": "^1.4.1",
     "moment": "^2.22.0",
