--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.0.1",
     "react-redux": "^5.0.7",
+    "react-responsive-carousel": "^3.1.41",
     "react-scroll-up": "^1.3.3",
     "react-swipeable-views": "^0.12.13",
     "redux": "^3.7.2",
