--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "axios-cache-adapter": "^2.1.1",
     "classnames": "^2.2.6",
     "emoji-flags": "^1.2.0",
     "faker": "^4.1.0",
@@ -65,6 +66,7 @@
     "react-redux": "^5.0.7",
     "react-responsive-carousel": "^3.1.41",
     "react-scroll-up": "^1.3.3",
+    "react-scrollable-anchor": "^0.6.1",
     "react-swipeable-views": "^0.12.13",
     "redux": "^3.7.2",
     "remove": "^0.1.5",
