--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-cache-adapter": "^2.1.1",
+    "axios-local-storage-cache": "^1.0.2",
     "classnames": "^2.2.6",
     "emoji-flags": "^1.2.0",
     "faker": "^4.1.0",
