--- a/package.json
+++ b/package.json
@@ -68,12 +68,15 @@
     "react-responsive-carousel": "^3.1.41",
     "react-scroll-up": "^1.3.3",
     "react-scrollable-anchor": "^0.6.1",
+    "react-select": "^2.0.0",
     "react-swipeable-views": "^0.12.13",
     "redux": "^3.7.2",
+    "redux-form": "^7.4.2",
     "remove": "^0.1.5",
     "semantic-ui-less": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
     "styled-components": "^3.3.3",
-    "typeface-roboto": "0.0.54"
+    "typeface-roboto": "0.0.54",
+    "uploadcare-widget": "^3.6.0"
   }
 }
