--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "axios-cache-adapter": "^2.1.1",
     "axios-local-storage-cache": "^1.0.2",
     "classnames": "^2.2.6",
+    "cookie": "^0.3.1",
     "emoji-flags": "^1.2.0",
     "faker": "^4.1.0",
     "hammerjs": "^2.0.8",
