add cookie expire

--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "axios-cache-adapter": "^2.1.1",
     "axios-local-storage-cache": "^1.0.2",
     "classnames": "^2.2.6",
-    "cookie": "^0.3.1",
     "emoji-flags": "^1.2.0",
     "faker": "^4.1.0",
     "hammerjs": "^2.0.8",
+    "js-cookie": "^2.2.0",
     "lodash.debounce": "^4.0.8",
     "material-ui": "^0.20.0",
     "material-ui-rating": "^1.4.1",
